--- a/Reservas.html
+++ b/Reservas.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/reservas.css" />
+    <link rel="stylesheet" href="../css/reservas.css" />
    
     
-    <title>Document</title>
+    <title>Contacto</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html">
+            <img src="./img/pngwing.com.png" alt="" width="150px"  class="d-inline-block align-text-top">
+            
+          </a>
+        </div>
+      </nav>
   <!-- Reservation -->
   <section id="reservation">
     <div class="container">
         <div class="row">
             <div class="col-12 intro-text">
-                <h1>Book Your Table</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
+                <h1 class="reserva text-light">Reserva tu mesa</h1>
+                <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
                     eveniet nobis accusantium?</p>
             </div>
         </div>
@@ -42,7 +50,7 @@
                             placeholder="Meesage"></textarea>
                     </div>
                     <div class="form-group text-center col-md-12">
-                        <a href="#" class="btn btn-brand">Send Message</a>
+                        <a href="#" class="btn btn-brand bg-light">Send Message</a>
                     </div>
                 </div>
             </div>
@@ -51,47 +59,14 @@
 </section>
 
 <!-- Insta Posts -->
-<div class="row g-0">
-    <div class="col-lg-3 col-sm-6">
-        <div class="insta-post">
-            <img src="./assets/images/insta_post01.jpg" alt="">
-            <a href="#" class="insta-btn">
-                <i class="ri-instagram-fill"></i>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-6">
-        <div class="insta-post">
-            <img src="./assets/images/insta_post02.jpg" alt="">
-            <a href="#" class="insta-btn">
-                <i class="ri-instagram-fill"></i>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-6">
-        <div class="insta-post">
-            <img src="./assets/images/insta_post03.jpg" alt="">
-            <a href="#" class="insta-btn">
-                <i class="ri-instagram-fill"></i>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-sm-6">
-        <div class="insta-post">
-            <img src="./assets/images/insta_post04.jpg" alt="">
-            <a href="#" class="insta-btn">
-                <i class="ri-instagram-fill"></i>
-            </a>
-        </div>
-    </div>
-</div>
+
  <!-- footer -->
  <footer class="bg-cover">
     <div class="footer-top">
         <div class="container">
             <div class="row gy-5">
                 <div class="col-lg-4">
-                    <img src="./assets/images/Qrispy_white.svg" class="mb-4" alt="">
+                    <img src="" class="mb-4" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit architecto unde
                         magnam.</p>
                     <div class="social-links">
@@ -102,15 +77,15 @@
                     </div>
                 </div>
                 <div class="col-lg-3 ms-auto">
-                    <h6 class="text-white mb-4">CONTACT</h6>
-                    <p class="mb-1">P:(03) 9283 4726</p>
-                    <p class="mb-1">E:enquiries@mill.co</p>
-                    <p class="mb-0">A: 14 Paramore Street Mornington Peninsula Victoria 3552</p>
+                    <h6 class="text-white mb-4">CONTACTO</h6>
+                    <p class="mb-1">LA FAMILIA</p>
+                    <p class="mb-1">ciorpaccorina@gmail.com.co</p>
+                    <p class="mb-0">L'eliana,Valencia,c\Ausias March 22,CP 46185</p>
                 </div>
                 <div class="col-lg-3">
-                    <h6 class="text-white mb-4">OPENING HOURS</h6>
-                    <p class="mb-1">PMonday-Friday : 08:00 - 22:00</p>
-                    <p>Saturday-Sunday : 08:00 - 22:00</p>
+                    <h6 class="text-white mb-4">HORARIO</h6>
+                    <p class="mb-1">Lunes-Viernes : 08:00 - 22:00</p>
+                    <p>Sabado-Domingo : 08:00 - 24:00</p>
                 </div>
             </div>
         </div>
