introduccion mapa googlemaps

--- a/menu.html
+++ b/menu.html
@@ -9,12 +9,13 @@
     <title>Carta</title>
  </head>
  <body>
+    <!-- Nav-bar -->
    <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link text-dark" aria-current="page" href="./index.html">HOME</a>
+        <a class="nav-link text-dark" aria-current="page" href="../index.html">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="./Reservas.html">RESERVAS</a>
+        <a class="nav-link text-dark" href="../Reservas.html">RESERVAS</a>
       </li>
      
     
@@ -23,6 +24,7 @@
       <div class="container">
           <div class="row">
               <div class="col-12 intro-text">
+                <!-- Presentacion carta -->
                   <h1>Explora nuestra carta</h1>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
                       eveniet nobis accusantium?</p>
@@ -69,16 +71,15 @@
                                   <div>
                                       <span>ENTRANTES</span>
                                       <span class="stars">
-                                          <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"><img src="./img/ensalada de brotes.png" alt=""></i>
+                                          <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">ENTRANTES</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small">Ofrecemos una gran variedad de entrantes, segun temporada </p>
                               </div>
                           </div>
                       </div>
