modificacion contenido y diseño

--- a/menu.html
+++ b/menu.html
@@ -26,12 +26,14 @@
               <div class="col-12 intro-text">
                 <!-- Presentacion carta -->
                   <h1>Explora nuestra carta</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sint temporibus natus optio
-                      eveniet nobis accusantium?</p>
+                  <p>Nuestra gastronomía está basada en la cocina de siempre con toques
+                    de vanguardia. Nos gusta innovar sobre todo en los aperitivos donde
+                    hay gran variedad. Cuidamos mucho la presentación, la puesta en
+                    escena y la personalización. </p>
               </div>
           </div>
       </div>
-
+<!-- Seccion para redirigir pestañas (nuestra carta,desayunos,almuerzos,comidas) Bootstrap -->
       <div class="container">
           <ul class="nav nav-pills mb-4 justify-content-center" id="pills-tab" role="tablist">
 
@@ -62,7 +64,7 @@
 
               <div class="tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab"
                   tabindex="0">
-
+<!-- Seccion entrantes/nuestra carta -->
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
@@ -79,10 +81,11 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">ENTRANTES</a></h5>
-                                  <p class="small">Ofrecemos una gran variedad de entrantes, segun temporada </p>
+                                  <p class="small">Ofrecemos una gran variedad de entrantes, segun producto de temporada...sin descuidar los clasicos </p>
                               </div>
                           </div>
                       </div>
+    <!-- Seccion pescados/nuestra carta -->                  
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/IMG-20190502-WA0002.jpg" alt="">
@@ -130,7 +133,7 @@
                                   <div>
                                       <span>Carnes</span>
                                       <span class="stars">
-                                          <i class="ri-star-fill"><img src="./img/merluza.jpg" alt=""></i>
+                                          <i class="ri-star-fill"><img src="../img/merluza.jpg" alt=""></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
@@ -328,8 +331,7 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">Gran variedad de bocadillos</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small"> El almuerzo en Valencia es mucho más que una comida, es una religión. Algo así como un “Brunch Mediterráneo” preparate para escoger entre una multitud de bandejas apetecibles </p>
                               </div>
                           </div>
                       </div>
@@ -367,7 +369,7 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2">Rico, autentico y al momento<a href="#"></a></h5>
+                                  <h5 class="mt-1 mb-2"><a href="#">Rico, autentico y al momento</a></h5>
                                   <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
                                       and olives</p>
                               </div>
@@ -405,7 +407,7 @@
                               <img src="./img/paella.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
-                                      <span>Rated(5.4)</span>
+                                      <span>Arroces</span>
                                       <span class="stars">
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
@@ -414,15 +416,34 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#">Todo tipo de arroces</a></h5>
+                                  <p class="small">Nuestra paella esta hecha de forma tradicional , además de ser especialistas en todo tipo de arroces por encargo.
+                                    Productos de cercanía con elaboraciones creativas y tradicionales hecha de forma casera</p>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/platos de cuchara.jpg" alt="">
+                              <div class="menu-item-content p-4">
+                                  <div>
+                                      <span>Platos de cuchara</span>
+                                      <span class="stars">
+                                          <i class="ri-star-fill"></i>
+                                          <i class="ri-star-fill"></i>
+                                          <i class="ri-star-fill"></i>
+                                          <i class="ri-star-fill"></i>
+                                          <i class="ri-star-half-fill"></i>
+                                      </span>
+                                  </div>
+                                  <h5 class="mt-1 mb-2"><a href="#">Verano o invierno...</a></h5>
+                                  <p class="small">Hora de cuchareo! Los platos de cuchara son reconfortantes en el cuerpo y en el alma. Te ofrecemos las mejores platos de cuchara, la ocasión perfecta para disfrutar con sopas, caldos.</p>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-3 col-sm-6">
+                          <div class="menu-item bg-white shadow-on-hover">
+                              <img src="./img/ensalada.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Ensaladas</span>
@@ -434,15 +455,14 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#"> Fresh & Food</a></h5>
+                                  <p class="small"> Pues bien, queremos darte variedad al menú de verano y para ello tenemos un amplio abanico de ensaladas frescas como por ejemplo ensaladas de legumbres, de patata, ensaladas frescas con aguacate, atún y mucho más...</p>
                               </div>
                           </div>
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/ensalada.jpg" alt="">
+                              <img src="./img/postres.webp" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Postres</span>
@@ -454,29 +474,8 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-sm-6">
-                          <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/postres.webp" alt="">
-                              <div class="menu-item-content p-4">
-                                  <div>
-                                      <span>Rated(5.4)</span>
-                                      <span class="stars">
-                                          <i class="ri-star-fill"></i>
-                                          <i class="ri-star-fill"></i>
-                                          <i class="ri-star-fill"></i>
-                                          <i class="ri-star-fill"></i>
-                                          <i class="ri-star-half-fill"></i>
-                                      </span>
-                                  </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#">Gran variedad de postres caseros</a></h5>
+                                  <p class="small">El postre es una de las cosas preferidas por el ser humano, generalmente con tonos dulces ya que como se dice comúnmente: "Después de una buena comida siempre hay hueco para un buen dulce".</p>
                               </div>
                           </div>
                       </div>
