modificacion ruta img

--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,7 @@
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/IMG-20190611-WA0001.jpg" alt="">
+                              <img src="../img/IMG-20190611-WA0001.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>ENTRANTES</span>
@@ -88,7 +88,7 @@
     <!-- Seccion pescados/nuestra carta -->                  
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/IMG-20190502-WA0002.jpg" alt="">
+                              <img src="../img/IMG-20190502-WA0002.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Pescados</span>
@@ -108,12 +108,12 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/1675024604298.jpeg" alt="">
+                              <img src="../img/1675024604298.jpeg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Ensaladas</span>
                                       <span class="stars">
-                                          <i class="ri-star-fill"><img src="./img/1675026077548.jpg" alt=""></i>
+                                          <i class="ri-star-fill"><img src="../img/1675026077548.jpg" alt=""></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
