--- a/Reservas.html
+++ b/Reservas.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">
-            <img src="./img/pngwing.com.png" alt="" width="150px"  class="d-inline-block align-text-top">
+            <img src="../img/pngwing.com.png" alt="" width="150px"  class="d-inline-block align-text-top">
             
           </a>
         </div>
