--- a/menu.html
+++ b/menu.html
@@ -148,7 +148,7 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="img/1675028307070.jpg" alt="">
+                              <img src="/img/1675028307070.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>De la tierra</span>
@@ -318,7 +318,7 @@
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="/img/almuerzo1.jpg" alt="">
+                              <img src="../img/almuerzo1.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Almuerzo popular</span>
