modificacion ruta img3

--- a/menu.html
+++ b/menu.html
@@ -88,7 +88,7 @@
     <!-- Seccion pescados/nuestra carta -->                  
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="../img/IMG-20190502-WA0002.jpg" alt="">
+                              <img src="./img/IMG-20190502-WA0002.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Pescados</span>
@@ -108,7 +108,7 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="../img/1675024604298.jpeg" alt="">
+                              <img src="./img/1675024604298.jpeg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Ensaladas</span>
@@ -128,7 +128,7 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="./img/1675028307070.jpg" alt="">
+                              <img src="../img/1675028307070.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Carnes</span>
