modificacion ruta img4

--- a/menu.html
+++ b/menu.html
@@ -12,10 +12,10 @@
     <!-- Nav-bar -->
    <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link text-dark" aria-current="page" href="../index.html">HOME</a>
+        <a class="nav-link text-dark" aria-current="page" href="./index.html">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="../Reservas.html">RESERVAS</a>
+        <a class="nav-link text-dark" href="./Reservas.html">RESERVAS</a>
       </li>
      
     
@@ -68,7 +68,7 @@
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="../img/IMG-20190611-WA0001.jpg" alt="">
+                              <img src="./img/IMG-20190611-WA0001.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>ENTRANTES</span>
@@ -113,7 +113,7 @@
                                   <div>
                                       <span>Ensaladas</span>
                                       <span class="stars">
-                                          <i class="ri-star-fill"><img src="../img/1675026077548.jpg" alt=""></i>
+                                          <i class="ri-star-fill"><img src="./img/1675026077548.jpg" alt=""></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
@@ -128,7 +128,7 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="../img/1675028307070.jpg" alt="">
+                              <img src="./img/1675028307070.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Carnes</span>
@@ -148,7 +148,7 @@
                       </div>
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="/img/1675028307070.jpg" alt="">
+                              <img src="./img/1675028307070.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>De la tierra</span>
@@ -318,7 +318,7 @@
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
-                              <img src="../img/almuerzo1.jpg" alt="">
+                              <img src="./img/almuerzo1.jpg" alt="">
                               <div class="menu-item-content p-4">
                                   <div>
                                       <span>Almuerzo popular</span>
