modificacion ruta img5

--- a/menu.html
+++ b/menu.html
@@ -133,7 +133,7 @@
                                   <div>
                                       <span>Carnes</span>
                                       <span class="stars">
-                                          <i class="ri-star-fill"><img src="../img/merluza.jpg" alt=""></i>
+                                          <i class="ri-star-fill"><img src="./img/merluza.jpg" alt=""></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
                                           <i class="ri-star-fill"></i>
