modificacion pagina reservas

--- a/menu.html
+++ b/menu.html
@@ -64,7 +64,7 @@
 
               <div class="tab-pane fade show active" id="pills-all" role="tabpanel" aria-labelledby="pills-all-tab"
                   tabindex="0">
-<!-- Seccion entrantes/nuestra carta -->
+<!-- columna entrantes/nuestra carta -->
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
@@ -85,7 +85,7 @@
                               </div>
                           </div>
                       </div>
-    <!-- Seccion pescados/nuestra carta -->                  
+    <!-- columna pescados/nuestra carta -->                  
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/IMG-20190502-WA0002.jpg" alt="">
@@ -106,6 +106,7 @@
                               </div>
                           </div>
                       </div>
+       <!-- columna ensaladas/nuestra carta -->                
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/1675024604298.jpeg" alt="">
@@ -126,6 +127,7 @@
                               </div>
                           </div>
                       </div>
+             <!-- columna carnes/nuestra carta -->          
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/1675028307070.jpg" alt="">
@@ -146,6 +148,7 @@
                               </div>
                           </div>
                       </div>
+                      <!-- 3 fila/nuestracarta -->
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/1675028307070.jpg" alt="">
@@ -229,7 +232,7 @@
                   </div>
 
               </div>
-
+<!-- seccion desayunos -->
               <div class="tab-pane fade show" id="pills-desayunos" role="tabpanel"
                   aria-labelledby="pills-desayunos-tab" tabindex="0">
                   <div class="row gy-4">
@@ -315,6 +318,7 @@
 
               <div class="tab-pane fade show" id="pills-almuerzos" role="tabpanel" aria-labelledby="pills-almuerzos-tab"
                   tabindex="0">
+                  <!-- seccion almuerzos -->
                   <div class="row gy-4">
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
@@ -401,7 +405,7 @@
               <div class="tab-pane fade show" id="pills-comida" role="tabpanel" aria-labelledby="pills-comida-tab"
                   tabindex="0">
                   <div class="row gy-4">
-
+<!-- seccion comida -->
                       <div class="col-lg-3 col-sm-6">
                           <div class="menu-item bg-white shadow-on-hover">
                               <img src="./img/paella.jpg" alt="">
