realizacion de Read.me

--- a/Reservas.html
+++ b/Reservas.html
@@ -18,14 +18,14 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">
-            <img src="./img/pngwing.com.png" alt="" width="150px"  class="d-inline-block align-text-top">
+            <img src="./img/pngwing.com.png" alt="" width="200px"  class="d-inline-block align-text-top">
             
           </a>
         </div>
       </nav>
   <!-- Reservas formulario -->
   <section id="reservation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12 intro-text">
                 <h1 class="reserva text-light">Reserva tu mesa</h1>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="form-group col-md-12">
                         <textarea name="" id="" cols="30" rows="4" class="form-control"
-                            placeholder="Meesage"></textarea>
+                            placeholder="Message"></textarea>
                     </div>
                     <div class="form-group text-center col-md-12">
                         <a href="#" class="btn btn-brand bg-light">Enviar</a> 
@@ -67,7 +67,7 @@
  <!-- footer -->
  <footer class="bg-cover mt-3">
     <div class="footer-top">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row gy-5">
                 <div class="col-lg-4">
                   <!-- insercion google maps -->
@@ -78,13 +78,13 @@
                
                 </div>
                  <!-- contacto y horario         -->
-                <div class="col-lg-3 ms-auto">
+                <div class="col-lg-4 ms-auto">
                     <h6 class="text-white mb-4">CONTACTO</h6>
                     <p class="mb-1">LA FAMILIA</p>
                     <p class="mb-1">ciorpaccorina@gmail.com.co</p>
                     <p class="mb-0">L'eliana,Valencia,c\Ausias March 22,CP 46185</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <h6 class="text-white mb-4">HORARIO</h6>
                     <p class="mb-1">Lunes-Viernes : 08:00 - 22:00</p>
                     <p>Sabado-Domingo : 08:00 - 24:00</p>
