--- a/menu.html
+++ b/menu.html
@@ -101,8 +101,7 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">Pescados</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small">Pescados frescos de temporada de nuestra costa, preparado  con esmero y dedicacion por nuestros cocineros con diversas guarniciones. </p>
                               </div>
                           </div>
                       </div>
@@ -122,8 +121,7 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">Ensaladas</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small">Diversas ensaladas ddesde las tipicas hasta la inovacion en conjunto con super alimentos como kale ,quinoa y como gran complemento crunch las semillas.</p>
                               </div>
                           </div>
                       </div>
@@ -143,8 +141,7 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">Carnes</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small">Preparadas con sumo respeto al producto, nuestro plato estrella es el "solomilo de ternera con salsa de foie y galleta de carajillo" asi como el "Entrecot de vaca macerada con 24 meses de curacion"</p>
                               </div>
                           </div>
                       </div>
@@ -163,9 +160,8 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Carpaccio de remolacha</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#">Carpaccio de remolacha cristal de manzana,queso feta y salsa miel mostaza</a></h5>
+                                  <p class="small"></p>
                               </div>
                           </div>
                       </div>
@@ -184,8 +180,7 @@
                                       </span>
                                   </div>
                                   <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <p class="small">Ceviche de dorada con mango y germinados de cilantro</p>
                               </div>
                           </div>
                       </div>
@@ -203,9 +198,8 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#">Solomillo iberico con bulgur de remolacha y caramelo de PX</a></h5>
+                                  <p class="small"></p>
                               </div>
                           </div>
                       </div>
@@ -223,9 +217,8 @@
                                           <i class="ri-star-half-fill"></i>
                                       </span>
                                   </div>
-                                  <h5 class="mt-1 mb-2"><a href="#">Fudgy Chewy Brownies</a></h5>
-                                  <p class="small">Baked salmon to a fresh salad made with chickpeas, arugula, herbs
-                                      and olives</p>
+                                  <h5 class="mt-1 mb-2"><a href="#">Ensalada templada de queso de cabra beicon y mermelada de tomate</a></h5>
+                                  <p class="small"></p>
                               </div>
                           </div>
                       </div>
