--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    
   <section class="p-5  text-center">
    
-      <div class="container ">
+      <div class="container-fluid ">
         <div class="parallax parallax-expand-lg pt-5"> 
           <div class="title p-3 col-md-6 ">
             
