--- a/Reservas.html
+++ b/Reservas.html
@@ -25,7 +25,7 @@
       </nav>
   <!-- Reservas formulario -->
   <section id="reservation">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12 intro-text">
                 <h1 class="reserva text-light">Reserva tu mesa</h1>
@@ -98,9 +98,7 @@
                 <div class="col-auto">
                     <p class="mb-0">Copyrights all rights reserved</p>
                 </div>
-                <div class="col-auto">
-                  
-                </div>
+            
             </div>
         </div>
     </div>
